// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsFeedCard matches snapshot with default state 1`] = `
<div>
  <div
    class="bg-card border border-gray-800 hover:shadow dark:border-dark-300 rounded-xl"
  >
    <div
      class="flex flex-row rounded-md items-center justify-between group p-4"
    >
      <div
        class="flex items-center gap-3"
        data-testid="header-wrapper"
      >
        <div
          class="w-12 h-12 flex items-center justify-center rounded-full"
          data-state="closed"
          data-testid="avatar-trigger"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 bg-current"
            data-testid="avatar-wrapper"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              JD
            </span>
          </span>
        </div>
        <div
          class="flex flex-col"
        >
          <a
            href="/user-profile/johndoe/personal-info"
          >
            <h3
              class="font-roboto font-medium text-sm"
            >
              John Doe
            </h3>
          </a>
          <p
            class="font-roboto font-normal text-sm dark:text-slate-400 text-slate-500"
          >
            January 1 2024, 7:00 PM
          </p>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="See More"
        class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border rounded-full hover:bg-muted opacity-0 group-hover:opacity-100 transition-opacity duration-200 w-8 h-8"
        data-state="closed"
        id="radix-:r0:"
        type="button"
      >
        <svg
          class="lucide lucide-ellipsis-vertical"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="12"
            cy="5"
            r="1"
          />
          <circle
            cx="12"
            cy="19"
            r="1"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-4 py-0"
    >
      <div
        class="flex flex-col font-roboto"
      >
        <p
          class="text-sm dark:text-slate-400 text-slate-600 whitespace-break-spaces text-wrap"
        >
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 flex items-center flex-wrap text-sm font-normal dark:text-slate-400 text-slate-600"
          />
          Test content
        </p>
      </div>
      <div
        class="my-2.5 relative w-full h-[207px] md:h-400 lg:h-[256px] xl:h-[323px] 2xl:h-[353px]"
      >
        <img
          alt="This is banner image fallback"
          class="rounded-[12px]"
          data-nimg="fill"
          decoding="async"
          fetchpriority="high"
          sizes="(max-width: 768px) 100vw"
          src="/_next/image?url=%2Ftest-image.jpg&w=3840&q=100"
          srcset="/_next/image?url=%2Ftest-image.jpg&w=640&q=100 640w, /_next/image?url=%2Ftest-image.jpg&w=750&q=100 750w, /_next/image?url=%2Ftest-image.jpg&w=828&q=100 828w, /_next/image?url=%2Ftest-image.jpg&w=1080&q=100 1080w, /_next/image?url=%2Ftest-image.jpg&w=1200&q=100 1200w, /_next/image?url=%2Ftest-image.jpg&w=1920&q=100 1920w, /_next/image?url=%2Ftest-image.jpg&w=2048&q=100 2048w, /_next/image?url=%2Ftest-image.jpg&w=3840&q=100 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
        />
        <div
          class="absolute right-0 bottom-[-27px]"
        >
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-label="Social Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white dark:hover:opacity-85 hover:shadow-sphere-primary border-primary rounded-full p-0 hover:opacity-100 relative w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
              type="button"
            >
              <svg
                class="lucide lucide-message-circle"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </button>
            <button
              aria-label="Social Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white dark:hover:opacity-85 hover:shadow-sphere-primary border-primary rounded-full p-0 hover:opacity-100 relative w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
              type="button"
            >
              <svg
                class="lucide lucide-link2"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 17H7A5 5 0 0 1 7 7h2"
                />
                <path
                  d="M15 7h2a5 5 0 1 1 0 10h-2"
                />
                <line
                  x1="8"
                  x2="16"
                  y1="12"
                  y2="12"
                />
              </svg>
            </button>
            <button
              aria-label="Social Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border text-white dark:hover:opacity-85 border-primary rounded-full p-0 hover:opacity-100 relative w-[54px] h-[54px] border-none bg-white dark:bg-blue-700 hover:bg-white dark:hover:bg-blue-700 shadow-sphere-medium hover:shadow-sphere-medium"
              type="button"
            >
              <div
                class="absolute inset-0 rounded-full origin-center bg-red-100 transition-all duration-400 z-0 scale-0"
              />
              <svg
                class="w-4 h-4 animate-bouncy relative z-2 text-red-100 dark:text-white"
                fill="none"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
                  fill="currentColor"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="items-center p-4 flex justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex"
        >
          <div
            class="relative"
          >
            <div
              class="w-[38px] h-[38px] flex items-center justify-center rounded-full"
              data-state="closed"
              data-testid="avatar-trigger"
            >
              <span
                class="relative flex shrink-0 overflow-hidden rounded-full h-[38px] w-[38px] bg-current border-[3px] border-white dark:border-dark-800"
                data-testid="avatar-wrapper"
              >
                <span
                  class="flex h-full w-full items-center justify-center rounded-full bg-muted"
                >
                  NS
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-baseline"
          >
            <a
              class="flex items-center border-none text-2xs hover:bg-transparent hover:text-primary"
              href="/user-profile/nellyschwartz/personal-info"
              title="Nelly Schwartz"
            >
              Nelly Schwartz
            </a>
            <label
              class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-2xs text-neutral-300"
            >
              , 
            </label>
          </div>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-neutral-300 text-2xs"
          >
            and 2 more liked this
          </label>
        </div>
      </div>
      <div
        class="flex items-center gap-[6px] px-[3px]"
      >
        <div
          class="flex items-center text-neutral-300"
        >
          <svg
            class="lucide lucide-heart"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
            />
          </svg>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
          >
            5
          </label>
        </div>
        <div
          class="flex items-center text-neutral-300"
        >
          <svg
            class="lucide lucide-link2"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7A5 5 0 0 1 7 7h2"
            />
            <path
              d="M15 7h2a5 5 0 1 1 0 10h-2"
            />
            <line
              x1="8"
              x2="16"
              y1="12"
              y2="12"
            />
          </svg>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
          >
            0
          </label>
        </div>
        <div
          class="flex items-center text-neutral-300"
        >
          <svg
            class="lucide lucide-message-circle"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
          >
            3
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewsFeedCard matches snapshot with media content 1`] = `
<div>
  <div
    class="bg-card border border-gray-800 hover:shadow dark:border-dark-300 rounded-xl"
  >
    <div
      class="flex flex-row rounded-md items-center justify-between group p-4"
    >
      <div
        class="flex items-center gap-3"
        data-testid="header-wrapper"
      >
        <div
          class="w-12 h-12 flex items-center justify-center rounded-full"
          data-state="closed"
          data-testid="avatar-trigger"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 bg-current"
            data-testid="avatar-wrapper"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              JD
            </span>
          </span>
        </div>
        <div
          class="flex flex-col"
        >
          <a
            href="/user-profile/johndoe/personal-info"
          >
            <h3
              class="font-roboto font-medium text-sm"
            >
              John Doe
            </h3>
          </a>
          <p
            class="font-roboto font-normal text-sm dark:text-slate-400 text-slate-500"
          >
            January 1 2024, 7:00 PM
          </p>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="See More"
        class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border rounded-full hover:bg-muted opacity-0 group-hover:opacity-100 transition-opacity duration-200 w-8 h-8"
        data-state="closed"
        id="radix-:r5:"
        type="button"
      >
        <svg
          class="lucide lucide-ellipsis-vertical"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="12"
            cy="5"
            r="1"
          />
          <circle
            cx="12"
            cy="19"
            r="1"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-4 py-0"
    >
      <div
        class="flex flex-col font-roboto"
      >
        <p
          class="text-sm dark:text-slate-400 text-slate-600 whitespace-break-spaces text-wrap"
        >
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 flex items-center flex-wrap text-sm font-normal dark:text-slate-400 text-slate-600"
          />
          Test content
        </p>
      </div>
      <div
        class="my-2.5 relative w-full h-[207px] md:h-400 lg:h-[256px] xl:h-[323px] 2xl:h-[353px]"
      >
        <img
          alt="This is banner image fallback"
          class="rounded-[12px]"
          data-nimg="fill"
          decoding="async"
          fetchpriority="high"
          sizes="(max-width: 768px) 100vw"
          src="/_next/image?url=%2Ftest-image.jpg&w=3840&q=100"
          srcset="/_next/image?url=%2Ftest-image.jpg&w=640&q=100 640w, /_next/image?url=%2Ftest-image.jpg&w=750&q=100 750w, /_next/image?url=%2Ftest-image.jpg&w=828&q=100 828w, /_next/image?url=%2Ftest-image.jpg&w=1080&q=100 1080w, /_next/image?url=%2Ftest-image.jpg&w=1200&q=100 1200w, /_next/image?url=%2Ftest-image.jpg&w=1920&q=100 1920w, /_next/image?url=%2Ftest-image.jpg&w=2048&q=100 2048w, /_next/image?url=%2Ftest-image.jpg&w=3840&q=100 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent;"
        />
        <div
          class="absolute right-0 bottom-[-27px]"
        >
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-label="Social Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white dark:hover:opacity-85 hover:shadow-sphere-primary border-primary rounded-full p-0 hover:opacity-100 relative w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
              type="button"
            >
              <svg
                class="lucide lucide-message-circle"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </button>
            <button
              aria-label="Social Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white dark:hover:opacity-85 hover:shadow-sphere-primary border-primary rounded-full p-0 hover:opacity-100 relative w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
              type="button"
            >
              <svg
                class="lucide lucide-link2"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 17H7A5 5 0 0 1 7 7h2"
                />
                <path
                  d="M15 7h2a5 5 0 1 1 0 10h-2"
                />
                <line
                  x1="8"
                  x2="16"
                  y1="12"
                  y2="12"
                />
              </svg>
            </button>
            <button
              aria-label="Social Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border text-white dark:hover:opacity-85 border-primary rounded-full p-0 hover:opacity-100 relative w-[54px] h-[54px] border-none bg-white dark:bg-blue-700 hover:bg-white dark:hover:bg-blue-700 shadow-sphere-medium hover:shadow-sphere-medium"
              type="button"
            >
              <div
                class="absolute inset-0 rounded-full origin-center bg-red-100 transition-all duration-400 z-0 scale-0"
              />
              <svg
                class="w-4 h-4 animate-bouncy relative z-2 text-red-100 dark:text-white"
                fill="none"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
                  fill="currentColor"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="items-center p-4 flex justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex"
        >
          <div
            class="relative"
          >
            <div
              class="w-[38px] h-[38px] flex items-center justify-center rounded-full"
              data-state="closed"
              data-testid="avatar-trigger"
            >
              <span
                class="relative flex shrink-0 overflow-hidden rounded-full h-[38px] w-[38px] bg-current border-[3px] border-white dark:border-dark-800"
                data-testid="avatar-wrapper"
              >
                <span
                  class="flex h-full w-full items-center justify-center rounded-full bg-muted"
                >
                  NS
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col"
        >
          <div
            class="flex items-baseline"
          >
            <a
              class="flex items-center border-none text-2xs hover:bg-transparent hover:text-primary"
              href="/user-profile/nellyschwartz/personal-info"
              title="Nelly Schwartz"
            >
              Nelly Schwartz
            </a>
            <label
              class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-2xs text-neutral-300"
            >
              , 
            </label>
          </div>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium text-neutral-300 text-2xs"
          >
            and 2 more liked this
          </label>
        </div>
      </div>
      <div
        class="flex items-center gap-[6px] px-[3px]"
      >
        <div
          class="flex items-center text-neutral-300"
        >
          <svg
            class="lucide lucide-heart"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
            />
          </svg>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
          >
            5
          </label>
        </div>
        <div
          class="flex items-center text-neutral-300"
        >
          <svg
            class="lucide lucide-link2"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7A5 5 0 0 1 7 7h2"
            />
            <path
              d="M15 7h2a5 5 0 1 1 0 10h-2"
            />
            <line
              x1="8"
              x2="16"
              y1="12"
              y2="12"
            />
          </svg>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
          >
            0
          </label>
        </div>
        <div
          class="flex items-center text-neutral-300"
        >
          <svg
            class="lucide lucide-message-circle"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          <label
            class="font-roboto peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-neutral-400 font-medium text-sm px-[5px]"
          >
            3
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewsFeedCard matches snapshot with open comments 1`] = `
<div>
  <div
    class="bg-card border border-gray-800 hover:shadow dark:border-dark-300 rounded-xl"
  >
    <div>
      <div
        class="p-4 flex flex-row justify-between items-center"
      >
        <h3
          class="font-roboto font-medium text-base text-neutral-400"
        >
          Comments (
          3
          )
        </h3>
        <button
          class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border border-none text-neutral-200 dark:text-neutral-100 bg-white hover:bg-gray-600 dark:bg-card hover:dark:bg-dark-500 rounded-full w-[30px] h-[30px]"
        >
          <svg
            class="lucide lucide-x text-neutral-400"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="p-4 max-h-[450px] overflow-auto"
      />
      <div
        class="flex items-center p-4"
      >
        <form
          class="flex flex-col w-full border dark:border-blue-800 rounded-lg"
        >
          <div
            class="space-y-2 w-full border-none rounded-lg"
          >
            <textarea
              aria-describedby=":ra:-form-item-description"
              aria-invalid="false"
              class="flex w-full border border-input bg-card text-sm ring-offset-background placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50 border-none focus:outline-none min-h-[128px] p-2.5 bg:transparent dark:bg-dark-500 rounded-none rounded-t-lg"
              id=":ra:-form-item"
              name="content"
              placeholder="Write a comment..."
            />
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="relative w-full flex items-center"
              data-testid="input-container"
            >
              <input
                aria-describedby=":rb:-form-item-description"
                aria-invalid="false"
                aria-label="Upload Media Comment"
                autocomplete="off"
                class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
                data-testid="input-element"
                id="media-comment-upload"
                type="file"
              />
            </div>
          </div>
          <div
            class="p-3"
          >
            <div
              class="relative"
            >
              <div
                class="relative w-full flex items-center"
              >
                <div
                  class="absolute top-1/2 -translate-y-1/2 transition-all duration-300 ease-in-out left-3 text-gray-900 dark:text-primary"
                >
                  <svg
                    class="lucide lucide-search"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="11"
                      cy="11"
                      r="8"
                    />
                    <path
                      d="m21 21-4.3-4.3"
                    />
                  </svg>
                </div>
                <input
                  autocomplete="true"
                  class="flex h-9 w-full border border-input hover:border-gray-900 bg-white dark:bg-dark-500 px-10 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-300 ease-in-out rounded-[4px] dark:border-dark-300"
                  placeholder="Who are you with?"
                  value=""
                />
                <div
                  class="absolute top-1/2 -translate-y-1/2 transition-all duration-300 ease-in-out text-gray-900 dark:text-white hover:dark:text-neutral-700 hover:text-neutral-700 right-3"
                  data-testid="close-icon"
                >
                  <svg
                    class="lucide lucide-x"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 6 6 18"
                    />
                    <path
                      d="m6 6 12 12"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex justify-between items-center p-2"
          >
            <div
              class="w-8 h-8 flex items-center justify-center rounded-full"
              data-state="closed"
              data-testid="avatar-trigger"
            >
              <span
                class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8 bg-current"
                data-testid="avatar-wrapper"
              >
                <span
                  class="flex h-full w-full items-center justify-center rounded-full bg-muted"
                >
                  JD
                </span>
              </span>
            </div>
            <div
              class="flex gap-4 items-center"
            >
              <button
                class="font-roboto inline-flex items-center justify-center whitespace-nowrap rounded-lg font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border dark:text-neutral-50 border-none w-fit h-fit text-neutral-300 hover:text-primary dark:hover:text-primary text-3xs"
                type="button"
              >
                <svg
                  class="lucide lucide-at-sign"
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="4"
                  />
                  <path
                    d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8"
                  />
                </svg>
              </button>
              <div
                class="flex relative"
              >
                <button
                  class="font-roboto inline-flex items-center justify-center whitespace-nowrap rounded-lg font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border dark:text-neutral-50 border-none w-fit h-fit text-neutral-300 hover:text-primary dark:hover:text-primary text-3xs"
                  type="button"
                >
                  <svg
                    class="lucide lucide-smile"
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M8 14s1.5 2 4 2 4-2 4-2"
                    />
                    <line
                      x1="9"
                      x2="9.01"
                      y1="9"
                      y2="9"
                    />
                    <line
                      x1="15"
                      x2="15.01"
                      y1="9"
                      y2="9"
                    />
                  </svg>
                </button>
                <div
                  class="absolute z-10 bottom-8 right-0"
                />
              </div>
              <button
                class="font-roboto inline-flex items-center justify-center whitespace-nowrap rounded-lg font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border dark:text-neutral-50 border-none w-fit h-fit text-neutral-300 hover:text-primary dark:hover:text-primary text-3xs"
                type="button"
              >
                <svg
                  class="lucide lucide-camera"
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
                  />
                  <circle
                    cx="12"
                    cy="13"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="font-roboto inline-flex items-center justify-center whitespace-nowrap rounded-lg font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white dark:hover:opacity-85 hover:opacity-75 hover:shadow-sphere-primary border-primary px-4 py-2 text-2xs h-9"
              >
                Post Comment
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
